Fixed bug #20865, array_key_exists() could not locate NULL keys.