ext/standard/array.c
@@ -21,7 +21,7 @@
    +----------------------------------------------------------------------+
 */
 
-/* $Id: array.c,v 1.208 2002/12/05 22:28:00 iliaa Exp $ */
+/* $Id: array.c,v 1.209 2002/12/06 17:35:52 iliaa Exp $ */
 
 #include "php.h"
 #include "php_ini.h"
@@ -3504,6 +3504,11 @@ PHP_FUNCTION(array_key_exists)
 
 		case IS_LONG:
 			if (zend_hash_index_exists(HASH_OF(*array), Z_LVAL_PP(key))) {
+				RETURN_TRUE;
+			}
+			RETURN_FALSE;
+		case IS_NULL:
+			if (zend_hash_exists(HASH_OF(*array), "", 1)) {
 				RETURN_TRUE;
 			}
 			RETURN_FALSE;
